--- a/style.css
+++ b/style.css
@@ -2,11 +2,13 @@ h1
 {
     font-family: 'Are You Serious', cursive;
     font-family: 'Cinzel Decorative', cursive;
+    text-decoration-color: white;
 }
 p 
 {
     font-family: 'Are You Serious', cursive;
     font-family: 'Cinzel Decorative', cursive;
+    text-decoration-color: white;
 }
 body
 {
