--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ p
     font-family: 'Are You Serious', cursive;
     font-family: 'Cinzel Decorative', cursive;
     text-decoration-color: rgb(0, 0, 0);
-    
+    background-color: gold;
 }
 body
 {
